# b403

./: 001-simple-chain.py  002-legacy-vs-lcel-chain.py  003-runnable-exec-order.py  004-invoke-stream-batch.py  005-builtin-runnables.py  006-builtin-functions-for-runnables.py  007-combining-chain.py  008-lcel-chains-in-rag.py  pyproject.toml  zzz-nb001-simple-chain.ipynb  zzz-nb002-intro-lcel.ipynb  zzz-nb003-runnable-order.ipynb  zzz-nb004-invoke-stream-batch.ipynb  zzz-nb006-builtin-functions-runnable.ipynb  zzz-nb007-combining-chains.ipynb  zzz-nb008-lcel-chains-at-work.ipynb
.ipynb_checkpoints/: zzz-nb000-193-chain-actions-checkpoint.ipynb  zzz-nb002-intro-lcel-checkpoint.ipynb  zzz-nb003-runnable-order-checkpoint.ipynb  zzz-nb004-invoke-stream-batch-checkpoint.ipynb  zzz-nb005-builtin-runnables-checkpoint.ipynb  zzz-nb006-builtin-functions-runnable-checkpoint.ipynb  zzz-nb007-combining-chains-checkpoint.ipynb
